# actixweb-seaorm-example

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  log4rs.yml
adapters/: Cargo.toml
adapters/src/: database_service.rs  lib.rs  middlewares.rs
adapters/src/handlers/: accounts.rs  auth.rs  mod.rs  prefectures.rs
common/: Cargo.toml
common/src/: jwt_token.rs  lib.rs
domains/: Cargo.toml
domains/src/models/: accounts.rs  auth.rs  common.rs
domains/src/repositories/: accounts.rs  auth.rs  common.rs  mod.rs
domains/src/services/: auth.rs  hashers.rs  mod.rs
infra/: Cargo.toml
infra/src/postgres/: mod.rs
infra/src/postgres/queries/: mod.rs
infra/src/postgres/repositories/: accounts.rs  auth.rs  common.rs  mod.rs  prefectures.rs
infra/src/postgres/schema/: accounts.rs  jwt_tokens.rs  mod.rs  prefectures.rs  prelude.rs
migrations/: 20220215022737_create_tables.down.sql  20220215022737_create_tables.up.sql
services/: Cargo.toml
usecases/: Cargo.toml
usecases/src/: accounts.rs  auth.rs  database_service.rs  lib.rs  prefectures.rs
usecases/src/queries/: mod.rs
