[package]
name = "adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
anyhow = "1.0"
chrono = "0.4"
common = { path = "../common" }
derive-new = "0.5"
domains = { path = "../domains" }
infra = { path = "../infra" }
jwt = "0.16"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ulid = "0.5"
usecases = { path = "../usecases" }

[dependencies.sea-orm]
version = "^0"
features = [
    "sqlx-postgres",
    "runtime-actix-native-tls",
    "macros",
    "debug-print"
]
default-features = false

[dev-dependencies]
dotenv = "0.15"
