[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-http = "3.0.0-rc.2"
actix-web = "4.0.0-rc.3"
anyhow = "1.0"
chrono = "0.4"
dotenv = "0.15"
hmac = { version = "0.12", features = ["reset"] }
jwt = "0.16"
once_cell = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
ulid = "0.5"
