[package]
name = "usecases"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
common = { path = "../common" }
derive-new = "0.5"
domains = { path = "../domains" }
hmac = { version = "0.12", features = ["reset"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dependencies.sea-orm]
version = "^0"
features = [
    "sqlx-postgres",
    "runtime-actix-native-tls",
    "macros",
    "debug-print"
]
default-features = false

[dev-dependencies]
dotenv = "0.15"
